# ruler

./: .gitignore  .html  Artifact.md  Cargo.toml  LICENSE  Makefile  OOPSLA21.md  OOPSLA23.md  README.md  a3.rules  all-rules.rules  bv.txt  bv4.rules_  condition_candidates  double_nested_bops_full.rules  figure1  full-rules.rules  gen-BV16.rules_  gen-BV32.rules_  gen-BV64.rules_  gen-BV8.rules_  generatehtml.py  guard.terms  halide-bool-rules.rules  halide-pred-rules.rules  halide-rat-rules.rules  l1.terms  l2.terms  more-nested-bops.rules  multi-no-cfold.sh  multi.sh  multi2.sh  nested-bops.rules  nested_bops_full.rules  nightly-script.sh  old_recipe.rules  old_terms.rules  pred-rules.rules  rational-slow-cvec.rules  recipe  (+18 more)
.cargo/: bigint.terms  config  config.toml
.github/workflows/: build.yml  tests.yml
ablation/: lib.rs  lib_no_run_rewrites.rs  main_minimize.rs  main_mrat.rs  parse.js  parsed.json  scripts.sh  visualize.py
baseline/: bool.rules  bv32.rules  bv4.rules  enumo_trig.rules  halide.rules  herbie-exp.rules  herbie-rational.rules  herbie-trig.rules  oopsla-halide.rules  rational.rules
cvc4/: bool-2vars.sy  bool-3vars.sy  bool-4vars.sy  bv32-3vars.sy  bv4-2vars.sy  bv4-3vars.sy  bv4ns-2vars.sy  bv4ns-3vars.sy  str-3vars.sy
docs/: index.html  site.css
equivalent/: bool_atoms.rules  bool_rules_oopsla.rules  bv32_rules_oopsla.rules  bv4.rules  bv4_rules_oopsla.rules  rational_rules_oopsla.rules
herbie-rules/: herbie-rules.txt
infra/: generatehtml.py  localnightly.sh  nightly.sh
infra/nightly/: index_base.html
infra/nightly-resources/: base.html  bool.html  bv.html  bv32.html  bv4.html  data.js  derive_detail.html  ff.html  generate.js  halide.html  index.html  index.js  index_base.html  latex.js  rational_best.html  rational_replicate.html  rules.html  stylesheet.css  table.js  utils.js
rep/: base.html  bool.html  bool.html18 i var obj = ;  bool_base.html  bv32.html  bv32_base.html  bv4.html  bv4_base.html  generatehtml.py  index.html  index_base.html  index_base.htmls|NAME|*|g  rational.html  rational_base.html  stylesheet.css  table.js
rep/json/: baseline.json  bool.json  bv32.json  bv4.json  herbie.json  output.json  rational.json
results/cvc4/: bool-2vars-2iters.json  bool-2vars-2iters.txt  bool-2vars-3iters.json  bool-2vars-3iters.txt  bool-3vars-2iters.json  bool-3vars-2iters.txt  bool-3vars-3iters.json  bool-3vars-3iters.txt  bool-4vars-2iters.json  bool-4vars-2iters.txt  bool-4vars-3iters.json  bool-4vars-3iters.txt  bv32-3vars-2iters.txt  bv4-2vars-2iters.json  bv4-2vars-2iters.txt  bv4-2vars-3iters.json  bv4-3vars-2iters.json  bv4-3vars-2iters.txt  bv4-3vars-3iters.json  str-3vars-2iters.txt  (+1 more)
scripts/: add-arrows.py  compare.py  cvec_time.py  egraph_size_eqsat_iters.py  eqsat_time.py  eval.sh  example_json  example_output  generate_latex_tables.py  postpass.sh  ruler_profile.py  scrape_halide_rules.py  stats.rkt  var_op_rule_time.py
src/: bv.rs  command.rs  convert_sexp.rs  derive.rs  enumo.rs  equality.rs  halide.rs  interval.rs  language.rs  lib.rs  llm.rs  logger.rs  main.rs  metrics.rs  recipe_utils.rs  stats.rs  synth.rs  util.rs
src/enumo/: mod.rs  (+9 more)
tests/: bigints.rs  bool.rs  bv-bool.rs  bv128.rs  bv16.rs  bv2-bool.json  bv2.json  bv32.json  bv32.rs  bv4.json  bv4.rs  bv64.rs  bv8.rs  compgen.rs  exponential.rs  float.rs  frep-szalinski.rs  halide.rs  hypot.rs  integers.rs  maxmin.rs  nat.rs  pos.rs  rat-ema-no-const.json  rat-ema.json  rat.json  rational.rs  real.json  szalinski-dev.rs  szalinski.rs  trig.rs
(+227 files in other folders)
