[package]
name = "ruler"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>", "Chandrakana Nandi <cnandi@cs.washington.edu>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = { version = "0.7", default-features = false }
rand_pcg = "0.2"
rand = { version = "0.7", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egg = { git = "https://github.com/egraphs-good/egg", rev = "39415f19acdacd6dde62f40cb2bb08f8669acc85" }
#egg = "0.6"
indexmap = "1"
num = "0.3"
num-bigint = { version = "0.3", features = ["rand"] }
lazy_static = "1.4.0"
itertools = "0.9.0"
clap = "3.0.0-beta.2"