[package]
name = "ruler"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>", "Chandrakana Nandi <cnandi@cs.washington.edu>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.7", default-features = false }
rand_pcg = "0.2"
rand = { version = "0.7", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "1"
num = "0.3"
num-bigint = { version = "0.3", features = ["rand"] }
ordered-float = "2.0.0"
libm = "0.2.1"
float-cmp = "0.8.0"
lazy_static = "1.4.0"
itertools = "0.9.0"
# fixed = "1.9.0"
z3 = "0.10.0"
#z3 = {version = "0.10.0", features = ["static-link-z3"]}
rustc-hash = "1"
symbolic_expressions = "5"
rayon = "1"
smallstr = "0.3"

[dependencies.egg]
version = "0.9"
# git = "https://github.com/egraphs-good/egg"
# rev = "8d68c8768cc18c2eae97f970e2b4162324cee787"   # 0.7-dev before proofs
# rev = "484fd6eec831a4078455ac47ef1172ede1b03dbf" # send sync
# rev = "116295f5c5afc58b34c732066c2e533bc4ad2ce8" # latest
# rev = "483876ffc7e38a3d1e55a1f249dcd7900093b99e" # use more precise analysis rebuild
# rev = "5d12e81a43d8eb6bfa8c29b62ba766143ba54a79" # Simplify unionfind
# rev = "e5ded849f55c735b88cc7fd8b74e111dca6685b5" # Use new rebuilding
# rev = "18e62918ed3c7b30b55a61108f19d405d6b4c3c7" # Don't use cell
# path = "../egg"
